# youtube-mcp-server

./: .gitignore  LICENSE  README.md  credentials.yml.example  pyproject.toml  requirements.txt  test_server.py  youtube_mcp_server.py
documents/: testing.md
